# agri-server

./: .gitignore  AGENTS.md  Exotel_AI_Voice_Agent_API_Reference.md  README.md  main.py  pyproject.toml  session-ses_281d.md
app/: main.py
app/adapters/: exotel.py
app/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
app/api/: __init__.py  text_chat.py  voice.py  voice_ws.py
app/core/: config.py  logger.py
app/models/: __init__.py  base.py  classify.py  ollama.py  reasoning.py  tts.py
app/services/: llm.py  rag.py  redis_cache.py  session.py  stt.py  tts.py  weather.py
app/utils/: audio.py
app/websocket/: handler.py
