[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "uvicorn>=0.44.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
]
