[project]
name = "agri-server"
version = "0.1.0"
description = "AI voice/text assistant for farmer helpline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sarvamai>=0.1.27",

    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "uvicorn>=0.44.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-pinecone>=0.2.0",
    "langchain-ollama>=0.1.0",
    "sentence-transformers>=3.0.0",
    "requests>=2.31.0",
]

[tool.setuptools]
packages = ["app"]
